2000-01-21  bertrand  <bertrand@helixcode.com>

	* tests/test10.c:
	test the mbox provider. 

	* camel/camel-folder.c (_set_name): 
	if camel_folder_get_mode returns an
	exception, return it instead of
	overriding it with a new one.
	(camel_folder_is_open): make the is_open
	method public.
	(_set_name): use the is_open instead of
	get_mode.
	(_set_name): set the fullname even in the case 
	where the folder has no parent.
	(_set_name): use %c, not %d to add the 
	separator char into the full path.

	* camel/camel-store.c: add exception handling everywhere in
	the store related functions arguments. 
	* camel/providers/mbox/camel-mbox-folder.c: idem
	* camel/providers/mbox/camel-mbox-folder.h: idem
	* camel/providers/mbox/camel-mbox-store.h: idem

	* camel/providers/mbox/Makefile.am (libcamelmbox_la_SOURCES): 
	added camel-mbox-provider.c to the mbox provider
	sources. 

	* camel/providers/mbox/camel-mbox-provider.c: 
	provider registration code.

	* camel/providers/mbox/camel-mbox-folder.c (_get_message_count): implemented
	(_append_message): implemented

	* camel/providers/mbox/camel-mbox-parser.c (initialize_buffer): 
	use \0 to mark the end of the buffer.
	(read_next_buffer_chunk): ditto.
	(read_header): test the presence of a \0 instead of
	reading the eof field
	(read_message_begining): idem.
	(camel_mbox_parse_file): idem.
	Remove the eof field from the parser
	structure. 
	(read_next_buffer_chunk): removed some nasty bugs
	again. 

	
2000-01-21  Federico Mena Quintero  <federico@helixcode.com>
	
	* libversit/vcc.y: Removed the VFS crap; my mistake, it should not
	go here.

	* configure.in: Added yacc requirements for libversit.

2000-01-21  Matt Loper  <matt@helixcode.com>

	* camel/camel-formatter.c (camel_formatter_make_html): added a
	CamelMimeMessage as a param to this function, and removed it as a
	member of the object.

2000-01-21  Federico Mena Quintero  <federico@helixcode.com>

	* configure.in (AC_OUTPUT): Added libversit/Makefile and